# smithay

./: .gitmodules  Cargo.toml  GEMINI.md  README.md  rickroll.sh  run-smallvil.sh
.agent/workflows/: bench.md  build.md  check.md
ansivil/: .gdb_history  Cargo.toml
ansivil/src/: ansi.rs  main.rs  ratatui.rs  state.rs  wgpu_renderer.rs
doc/: gpu-ansi-encoder-integration.md  ratatui_refactor.md  wgpu-renderer-design.md
examples/: backend_ratatui.rs
smallvil/: Cargo.toml
smallvil/src/: compositor.wgsl  gpu_renderer.rs  input.rs  main.rs  ratatui.rs  shader.wgsl  vulkan_import.rs  wgpu_renderer.rs
smallvil/src/handlers/: dmabuf.rs  mod.rs  xdg_shell.rs
src/backend/: mod.rs
src/backend/drm/surface/: atomic.rs
src/backend/ratatui/: mod.rs
src/backend/renderer/: mod.rs  ratatui.rs
src/backend/renderer/ratatui/: mod.rs
src/backend/renderer/wgpu/: mod.rs  shader.wgsl
