[package]
name = "smallvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
crossterm = "0.28.0"
tracing = "0.1.41"

[dependencies.ratatui]
path = "../../ratatui/ratatui"

[dependencies.ratatui-core]
path = "../../ratatui/ratatui-core"

[dependencies.smithay]
path = "../"
default-features = false
features = ["backend_winit", "backend_ratatui", "wayland_frontend", "desktop"]
