[package]
name = "smallvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
crossterm = "0.28.0"
tracing = "0.1.41"
ratatui = { version = "0.29.0", features = ["crossterm"] }
wgpu = { version = "27.0.1", features = ["vulkan"] }
wgpu-hal = { version = "27.0.1", features = ["vulkan"] }
gpu_ansi_encoder = { path = "../rust-gpu-test" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3.31"
pollster = "0.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
ash = "0.38.0"

[dependencies.smithay]
path = "../"
default-features = false
features = ["backend_winit", "backend_ratatui", "wayland_frontend", "desktop"]
